--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="shortcut icon" href="/assets/joeylogo.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="./assets/img/joeylogo.jpg" type="image/jpg">
     <title>Joey Cadieux | Web</title>
 </head>
 
 <body>
     <main>
         <header>
-            <img src="./assets/joeylogo.jpg">
+            <img src="./assets/img/joeylogo.jpg">
             <h1>
                 @JoeyCadieux
             </h1>
