--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="shortcut icon" href="./assets/img/joeylogo.jpg" type="image/jpg">
-    <title>Joey Cadieux | Web</title>
+    <title>Joey Cadieux</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <header>
             <img src="./assets/img/joeylogo.jpg">
             <h1>
-                @JoeyCadieux
+                @drjoeycadieux
             </h1>
         </header>
 
