--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href="https://ca.linkedin.com/in/joey-cadieux-5671251a2">Linkedin</a></li>
             <li><a href="https://www.facebook.com/profile.php?id=100084066996866&mibextid=ZbWKwL">Facebook</a></li>
-            <li><a href="https://x.com/drjoeycadieux">Twitter</a></li>
+            <li><a href="https://x.com/drjoeycadieux">X</a></li>
             <li><a href="https://github.com/drjoeycadieux">Github</a></li>
             <li><a href="mailto:joeycadieux161@gmail.com&subject=Joey Cadieux Website">Email</a></li>
         </ul>
