--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         </header>
 
         <ul>
-            <li><a href="https://ca.linkedin.com/in/joey-cadieux-5671251a2">Linkedin</a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100084066996866&mibextid=ZbWKwL">Facebook</a></li>
-            <li><a href="https://x.com/drjoeycadieux">X</a></li>
-            <li><a href="https://github.com/drjoeycadieux">Github</a></li>
-            <li><a href="mailto:joeycadieux161@gmail.com&subject=Joey Cadieux Website">Email</a></li>
+            <li><a target="_blank" href="https://ca.linkedin.com/in/joey-cadieux-5671251a2">Linkedin</a></li>
+            <li><a target="_blank"
+                    href="https://www.facebook.com/profile.php?id=100084066996866&mibextid=ZbWKwL">Facebook</a></li>
+            <li><a target="_blank" href="https://x.com/drjoeycadieux">X</a></li>
+            <li><a target="_blank" href="https://github.com/drjoeycadieux">Github</a></li>
+            <li><a target="_blank" href="mailto:joeycadieux161@gmail.com&subject=Joey Cadieux Website">Email</a></li>
         </ul>
     </main>
 </body>
