--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="shortcut icon" href="./assets/img/joeylogo.jpg" type="image/jpg">
     <title>Joey Cadieux</title>
 </head>
@@ -18,6 +19,10 @@
             </h1>
         </header>
 
+        <div class="typewriter">
+            <h1 class="typewriter-text">Programmer, Security Hacker, Software Developer & Consultant.</h1>
+        </div>
+
         <ul>
             <li><a target="_blank" href="https://ca.linkedin.com/in/joey-cadieux-5671251a2">Linkedin</a></li>
             <li><a target="_blank"
@@ -27,6 +32,8 @@
             <li><a target="_blank" href="mailto:joeycadieux161@gmail.com&subject=Joey Cadieux Website">Email</a></li>
         </ul>
     </main>
+
+    <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
